<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rechner.MainActivity" >



    <EditText
        android:id="@+id/EditText_Feld1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal" />
    
        <EditText
        android:id="@+id/EditText_Feld2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

       <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Textinfo1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/normale_groesse" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_Feld1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/Textinfo2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/normale_groesse" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiplizieren"
        android:layout_centerHorizontal="true"
        android:text="@string/Ergebnis"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <TextView
        android:id="@+id/Ergebnisanzeige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multiplizieren"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/dividieren"
        android:gravity="right"
        android:linksClickable="false"
        android:text="@string/Ergebnisanzeige"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />
    

    <Button
        android:id="@+id/multiplizieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dividieren"
        android:layout_alignLeft="@+id/addieren"
        android:minHeight="@dimen/Button_Hoehe"
        android:minWidth="@dimen/Button_Hoehe"
        android:paddingBottom="1dp"
        android:paddingTop="30dp"
        android:text="@string/Buttonmal"
        android:textSize="@dimen/Button_Textgr" />

    <Button
        android:id="@+id/dividieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subtrahieren"
        android:layout_below="@+id/subtrahieren"
        android:minHeight="@dimen/Button_Hoehe"
        android:minWidth="@dimen/Button_Hoehe"
        android:text="@string/Buttongeteilt"
        android:textSize="@dimen/Button_Textgr" />
    
     <Button
        android:id="@+id/addieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/subtrahieren"
        android:layout_alignBottom="@+id/subtrahieren"
        android:layout_alignLeft="@+id/EditText_Feld2"
        android:minHeight="@dimen/Button_Hoehe"
        android:minWidth="@dimen/Button_Hoehe"
        android:onClick="addieren"
        android:text="@string/Buttonplus"
        android:textSize="@dimen/Button_Textgr" />

    <Button
        android:id="@+id/subtrahieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/EditText_Feld2"
        android:layout_below="@+id/EditText_Feld2"
        android:minHeight="@dimen/Button_Hoehe"
        android:minWidth="@dimen/Button_Hoehe"
        android:text="@string/Buttonminus"
        android:textSize="@dimen/Button_Textgr" />


</RelativeLayout>